removed extraenous closing span tag

--- a/tvm-calc-test.html
+++ b/tvm-calc-test.html
@@ -153,16 +153,16 @@
             <div class="">
                 <form action="" class="indent">
 
-                    <label>PV</span> </label>
+                    <label>PV </label>
                     <input id="pvalue" type="number" placeholder="0"><br>
 
-                    <label>FV</span> </label>
+                    <label>FV </label>
                     <input id="FV" type="number" placeholder="0"><br>
 
-                    <label>&nbsp;&nbsp;&nbsp;i </span></label>
+                    <label>&nbsp;&nbsp;&nbsp;i </label>
                     <input id="int" type="number" placeholder=".00"><br>
 
-                    <label>&nbsp;&nbsp;n</span> </label>
+                    <label>&nbsp;&nbsp;n </label>
                     <input id="yrs" type="number" placeholder="0"><br>
 
                 </form>
