--- a/tvm3/lecture3.html
+++ b/tvm3/lecture3.html
@@ -117,15 +117,15 @@
                             <h5>The basic form of the Time Value of Money (TVM) equation is:</h5>
                             <p>
                                 <div class="math">
-                                    FV</span> = PV</span>(1 + i</span>)<sup>n</sup></span>
+                                    = (1 +)<sup>n</sup></span>
                                 </div>
                             </p>
                             <p>Where:<br>
                                 <div class="math">
-                                    FV</span> = Future Value<br>
-                                    PV</span> = Present Value<br>
-                                    i</span> = interest rate (%)<br>
-                                    n</span> = number of years
+                                    = Future Value<br>
+                                    = Present Value<br>
+                                    = interest rate (%)<br>
+                                    = number of years
 
                                 </div>
                             </p>
@@ -167,11 +167,11 @@
                             </p>
                             <p>Where:<br>
                                 <div class="math">
-                                    FV</span> = Future Value<br>
-                                    PV</span> = Present Value<br>
-                                    i</span> = interest rate (%)<br>
-                                    n</span> = number of years<br>
-                                    m</span> = number of compound periods per year
+                                    = Future Value<br>
+                                    = Present Value<br>
+                                    = interest rate (%)<br>
+                                    = number of years<br>
+                                    = number of compound periods per year
 
                                 </div>
                             </p>
@@ -315,7 +315,7 @@
                                 <div class="bottom-space">
                                     <img src="./images/tvm3_perpetuity_pv.png" class="img-fluid img-math" alt="">
                                 </div>
-                                where i</span> equals the appropriate discounting interest rate, based on the risk associated with the asset.
+                                where equals the appropriate discounting interest rate, based on the risk associated with the asset.
                             </p>
                         </div>
                     </div>
@@ -608,8 +608,8 @@
                             <div class="math">
                                 FVA</span> = The future value of the annuity<br>
                                 <span class="cf">CF</span> = Dollar amount of the individual cash flows<br>
-                                n</span> = number of years<br>
-                                i</span> = stated interest rate
+                                = number of years<br>
+                                = stated interest rate
                             </div>
                             <p>The FVA equation can be derived from the genral format of the TVM equation. The derivation won't be shown here, but you should be aware that there is a relationship between the two equations.</p>
                         </div>
@@ -688,18 +688,18 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <h4>Identify the Basic Variables (FVA</span>, <span class="cf">CF</span>, i</span>, n</span>)</h4>
+                            <h4>Identify the Basic Variables (FVA</span>, <span class="cf">CF</span>,, )</h4>
                             <p class="question">How much is an annuity worth at the end of three years if it pays $100 at the end of each year assuming 10% interest?</p>
-                            <p>Let's break down the question. FVA</span> is the future value of the annuity payments. The question asks "how much is the annuity worth at the end", so this must be the unknown variable. This means <span class="FV math">FV</span> = ?.</p>
-                            <p>n</span> is the measure of time in years. In other problems, you might see n expressed as a number or as a noun like decade or century. This means <span class="yrs math">n</span> = 3.</p>
+                            <p>Let's break down the question. FVA</span> is the future value of the annuity payments. The question asks "how much is the annuity worth at the end", so this must be the unknown variable. This means <span class="FV math"> = ?.</p>
+                            <p> is the measure of time in years. In other problems, you might see n expressed as a number or as a noun like decade or century. This means <span class="yrs math"> = 3.</p>
                             <p><span class="cf">CF</span> is the value of the regularly scheduled cash flow. This means <span class="CF math">CF</span> = $100.</p>
                             <p>i</span> is the rate of return. The % is an indicator of interest. This means that <span class="int math">i</span> = 10%. Generally, this number is converted to a decimal for use in equations. 10% is the same as .10.</p>
-                            <p class="question">How much is an annuity worth at the end</span> of three years</span> if it <span class="cf">pays $100</span> at the end of each year assuming 10% interest</span>?
+                            <p class="question">How much is an annuity worth at the end</span> of three years</span> if it <span class="cf">pays $100</span> at the end of each year assuming 10% Interest?
                                 <div class="math">
-                                    FV</span> = ?<br>
-                                    n</span> = 3<br>
+                                    = ?<br>
+                                    = 3<br>
                                     <span class="cf">CF</span> = 100<br>
-                                    i</span> = 10% &rarr; .10
+                                    = 10% &rarr; .10
                                 </div>
                             </p>
                             <hr>
@@ -709,10 +709,10 @@
                             <div class="row">
                                 <div class="col-12 col-sm-12 col-md-6">
                                     <div class="math">
-                                        FV</span> = ?<br>
-                                        n</span> = 3<br>
+                                        = ?<br>
+                                        = 3<br>
                                         <span class="cf">CF</span> = 100<br>
-                                        i</span> = 10% &rarr; .10
+                                        = 10% &rarr; .10
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-6">
@@ -834,7 +834,7 @@
                                 <div class="math">
                                     FVA</span> = <span class="cf">CF</span>[FVA Factor]
                                 </div>
-                                The intersection of n</span> = 3 in the left column and i</span> = 10% in the top row shows the FVA factor. Then multiply the FVA factor by the <span class="cf">CF</span> = 100.
+                                The intersection of = 3 in the left column and = 10% in the top row shows the FVA factor. Then multiply the FVA factor by the <span class="cf">CF</span> = 100.
                                 <div class="bottom-space">
                                     <img src="./images/future_value_annuity.png" class="img-fluid img-math" alt=""><br>
                                     <img src="./images/tvm3_fva_factor.png" class="img-fluid img-math" alt="">
@@ -982,7 +982,7 @@
                             </p>
                             <p>Notice that we simply modified the existing formula. the variable m stands for the number of compounding periods per year.
                                 <ul>
-                                    <li>The adjustment made to the FVA equation is the same adjustment we made to the general TVM equation, dividing each i</span> by m</span> and multiplying n</span> by m</span>.</li>
+                                    <li>The adjustment made to the FVA equation is the same adjustment we made to the general TVM equation, dividing each by and multiplying by.</li>
                                     <li>As before, the calculation in the brackets can be replaced from a figure taken from the FVA Factor table.</li>
                                 </ul>
                                 Let's modify our example to practice calculating FVA with compound interest.
@@ -1020,26 +1020,26 @@
                     <div class="col-12">
                         <div class="content">
                             <div>
-                                <h4>Identify the Basic Variables (FVA</span>, <span class="cf">CF</span>, i</span>, n</span>, m</span>)</h4>
+                                <h4>Identify the Basic Variables (FVA</span>, <span class="cf">CF</span>,, ,)</h4>
 
                                 <p class="question">How much is an annuity worth at the end of three years if it pays $10 per month at the end of each month assuming 10% interest?</p>
 
-                                <p>Let's break down the question. FVA</span> is the future value of the annuity payments. The question asks "how much is the annuity worth at the end", so this must be the unknown variable. This means <span class="FV math">FV</span> = ?.</p>
+                                <p>Let's break down the question. FVA</span> is the future value of the annuity payments. The question asks "how much is the annuity worth at the end", so this must be the unknown variable. This means <span class="FV math"> = ?.</p>
 
-                                <p>n</span> is the measure of time in years. In other problems, you might see n expressed as a number or as a noun like decade or century. This means <span class="yrs math">n</span> = 3.</p>
+                                <p> is the measure of time in years. In other problems, you might see n expressed as a number or as a noun like decade or century. This means <span class="yrs math"> = 3.</p>
 
                                 <p><span class="cf">CF</span> is the value of the regularly scheduled cash flow. This means <span class="CF math">CF</span> = $10.</p>
 
-                                <p>m</span> is the number of times interest is compounded per year. Adverbs like semi-annually, quarterly, monthly, or daily are often clues. In this case, its monthly, which is 12 times per year. m</span> = 12.</p>
+                                <p>m</span> is the number of times interest is compounded per year. Adverbs like semi-annually, quarterly, monthly, or daily are often clues. In this case, its monthly, which is 12 times per year. = 12.</p>
 
                                 <p>i</span> is the rate of return. The % is an indicator of interest. This means that <span class="int math">i</span> = 10%. Generally, this number is converted to a decimal for use in equations. 10% is the same as .10.</p>
 
-                                <p class="question">How much is an annuity worth at the end</span> of three years</span> if it <span class="cf">pays $10</span> per month</span> at the end of each month assuming 10% interest</span>?
+                                <p class="question">How much is an annuity worth at the end</span> of three years</span> if it <span class="cf">pays $10</span> per month</span> at the end of each month assuming 10% Interest?
                                     <div class="math">
-                                        FV</span> = ?<br>
-                                        n</span> = 3<br>
+                                        = ?<br>
+                                        = 3<br>
                                         <span class="cf">CF</span> = 100<br>
-                                        i</span> = 10% &rarr; .10
+                                        = 10% &rarr; .10
                                     </div>
                                 </p>
                                 <hr>
@@ -1198,7 +1198,7 @@
                                         <label>&nbsp;&nbsp;&nbsp;&nbsp;i </span></label>
                                         <input id="int-ex1" type="number" placeholder="0.00"><br>
 
-                                        <label>&nbsp;&nbsp;&nbsp;n</span> </label>
+                                        <label>&nbsp;&nbsp;&nbsp; </label>
                                         <input id="yrs-ex1" type="number" placeholder="0"><br>
 
                                         <label>&nbsp;&nbsp;m</span> </label>
@@ -1244,11 +1244,11 @@
                             <p class="question">If I save $1200 per year in an account that earns 8% interest (annually compounded) for 20 years, how much should my account be worth?</p>
                             <p>Variables:</p>
                             <p class="math">
-                                <span class="FVA">FV</span> = ? <br>
-                                <span class="cf">CF</span> = 1200 <br>
-                                i</span> = 8% &xrarr; 0.08<br>
-                                n</span> = 20<br>
-                                m</span> = 1
+                                <span class="FVA"> = ? <br>
+                                    <span class="cf">CF</span> = 1200 <br>
+                                    = 8% &xrarr; 0.08<br>
+                                    = 20<br>
+                                    = 1
                             </p>
                         </div>
                     </div>
@@ -1330,9 +1330,9 @@
                             <p>Variables:</p>
                             <p class="math">FVA</span> = ?<br>
                                 <span class="cf">CF</span> = 1200<br>
-                                i</span> = 0.08<br>
-                                n</span> = 20<br>
-                                m</span> = 1</p>
+                                = 0.08<br>
+                                = 20<br>
+                                = 1</p>
 
                             <p>Plug the numbers into the equation:</p>
                             <p>
@@ -1383,7 +1383,7 @@
                                         <input id="cf-ex3" type="number" placeholder="0"><br>
                                         <label>&nbsp;&nbsp;&nbsp;i </span></label>
                                         <input id="int-ex3" type="number" placeholder=".00"><br>
-                                        <label>&nbsp;&nbsp;n</span> </label>
+                                        <label>&nbsp;&nbsp; </label>
                                         <input id="yrs-ex3" type="number" placeholder="0"><br>
                                         <label>&nbsp;m</span> </label>
                                         <input id="cmpd-ex3" type="number" placeholder="0"><br>
@@ -1428,9 +1428,9 @@
                             <h5>Variables:</h5>
                             <p class="math">FVA</span> = ?<br>
                                 <span class="cf">CF</span> = 100<br>
-                                i</span> = 8% or 0.08<br>
-                                n</span> = 20<br>
-                                m</span> = 12</p>
+                                = 8% or 0.08<br>
+                                = 20<br>
+                                = 12</p>
                         </div>
                     </div>
                 </div>
@@ -1511,9 +1511,9 @@
                             <p class="math">
                                 FVA</span> = ?<br>
                                 <span class="cf">CF</span> = 100<br>
-                                i</span> = 0.08<br>
-                                n</span> = 20<br>
-                                m</span> = 12</p>
+                                = 0.08<br>
+                                = 20<br>
+                                = 12</p>
 
                             <p>Plug the numbers into the equation:</p>
                             <p>
@@ -1603,10 +1603,10 @@
                             <div class="row">
                                 <div class="col-12 col-sm-12 col-md-6">
                                     <div class="math" style="margin-left: 30px;">
-                                        PV</span> = $54,914.36<br>
-                                        FV</span> = ?<br>
-                                        i</span> = 0.08<br>
-                                        n</span> = 1<br>
+                                        = $54,914.36<br>
+                                        = ?<br>
+                                        = 0.08<br>
+                                        = 1<br>
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-6">
@@ -1706,9 +1706,9 @@
                                         <b>The quarterly option:</b><br>
                                         FVA</span> = ?<br>
                                         <span class="cf">CF</span> = 500<br>
-                                        i</span> = 0.06<br>
-                                        n</span> = 10<br>
-                                        m</span> = 4<br>
+                                        = 0.06<br>
+                                        = 10<br>
+                                        = 4<br>
                                     </p>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-6">
@@ -1757,9 +1757,9 @@
                                         <b>The semi-annual option:</b><br>
                                         FVA</span> = ?<br>
                                         <span class="cf">CF</span> = 1000<br>
-                                        i</span> = 0.06<br>
-                                        n</span> = 10<br>
-                                        m</span> = 2<br>
+                                        = 0.06<br>
+                                        = 10<br>
+                                        = 2<br>
                                     </p>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-6">
